# nvidia-power-manager

./: README.md  meson.build  meson_options.txt
cpld_utility/: dragonCpld.cpp  dragonCpld.hpp  libcpld.c  libcpld.cpp  libcpld.h  libi2c.cpp  libi2c.h  main.c  main.cpp  meson.build  updateCPLDFw_dbus_log_event.c  updateCPLDFw_dbus_log_event.cpp  updateCPLDFw_dbus_log_event.h  updateFPGA.c  utils.cpp  utils.hpp
include/: crc.hpp  dragonChassisBase.hpp  i2c.hpp
mtd_update/: meson.build  mtdupdate.sh
nvidia-cpld/: cpldi2ccmd.sh  meson.build
nvidia-cpld/services/: meson.build  nvidia-cpld.service
nvidia-cpld/src/: .clang-format  cpld.cpp  cpld.hpp  cpld_manager.cpp  cpld_manager.hpp  cpld_util.hpp  main.cpp  meson.build
nvidia-cpld/tests/: meson.build  test_cpld.cpp
nvidia-power-supply/: meson.build  psui2ccmd.sh
nvidia-power-supply/services/: meson.build  nvidia-power-supply.service
nvidia-power-supply/src/: main.cpp  meson.build  power_supply.hpp  psu_manager.cpp  psu_manager.hpp  psu_util.hpp
nvidia-power-supply/tests/: meson.build  test_psu.cpp
nvidia-psu-monitor/: meson.build
nvidia-psu-monitor/services/: meson.build  nvidia-psu-monitor.service
nvidia-psu-monitor/src/: PsuEvent.cpp  PsuEvent.hpp  PsuMonitor.cpp  PsuMonitor.hpp  main.cpp  meson.build  psu.json  utils.cpp  utils.hpp
psu_utility/: deltapsuxx.hpp  dragonChassisBasePsu.cpp  dragonChassisBasePsu.hpp  dragonChassisPsuUpdate.cpp  dragonDeltaPsu.cpp  dragonDeltaPsu.hpp  i2c.hpp  main.cpp  meson.build  util.hpp
src/: README.md  meson.build  power_manager.cpp  power_manager.hpp  power_manager_main.cpp  power_manager_property.hpp  power_util.hpp  powermanager.json
src/services/: meson.build  nvidia-power-manager.service
