option('dragon_chassis_psu', type: 'feature', value: 'disabled', description: 'Add Dragon PSU update into the build')
option('dragon_chassis_cpld', type: 'feature', value: 'disabled', description: 'Add Dragon CPLD update into the build')
option('tests', type: 'feature', value: 'enabled', description: 'Build tests.',)
option('module_num', type: 'integer', min: 1, max: 4, value: 1, description: 'Specifies the number of module instance')
